# sqlconnect

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  LICENCE  Pipfile  README.md  connections.yaml  docker-compose.yaml  example_usage.py  pyproject.toml  query.sql  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  tests.yaml
SQLconnect/: __init__.py  config.py  connector.py
docs/: conf.py  contributing.md  contributing.rst  documentation.rst  index.rst  install.md  install.rst  license.rst  requirements.txt  tutorial.md  tutorial.rst  usage.md
example/: command.sql
sqlconnect/: config.py  connector.py
src/sqlconnect/: __init__.py  config.py  connector.py
tests/: test_sqlconnect_config.py  test_sqlconnect_connector.py
tests/integration/: docker-entrypoint.sh  migration.py  test_mssql.py  test_mysql.py  test_oracle.py  test_postgres.py
tests/integration/inputs/: mssql_sqlconnect.env  mssql_sqlconnect.yaml  mysql_sqlconnect.env  mysql_sqlconnect.yaml  oracle_sqlconnect.env  oracle_sqlconnect.yaml  postgres_sqlconnect.env  postgres_sqlconnect.yaml  sqlconnect.yaml
tests/integration/setup/: docker-entrypoint.sh  migration.py
tests/integration/sql/: test_employees.sql  test_insert_record.sql
tmp_sqlconnect/: __init__.py  config.py
